--- a/css/custom.css
+++ b/css/custom.css
@@ -5,7 +5,7 @@ h3{
 .background{background-image: url("../img/pexels-photo-951240.jpeg");}
 .background{height:60px;}
 body{
-	background-color:white;
+	background-image: url("../img/pexels-photo-951240.jpeg");
 }
 img{ width:250px;
 	height:200px;}
